# pynyu

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  start_venv.sh  tox.ini
.github/workflows/: run_pytest_with_cov.yaml
examples/: hello_world.py
scripts/: build.sh  deploy_prod.sh  deploy_test.sh  run_tests.sh  run_tests_cov.sh
src/pynyu/: __init__.py  hello.py  test_hello.py
src/pynyu/discrete/common/: combinatorial_number.py  factorial.py  multiply_sequence.py  test_combinatorial_number.py  test_combinatorial_value.py  test_factorial.py  test_multiply_sequence.py
